<resources>
    <string name="app_name">Control Antenas RadioClub</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_about">Acerca de</string>
    <string name="display_text">Display Text</string>
    <string name="change_text_color">Change Text Color</string>
    <string name="server">IP del Servidor</string>
    <string name="port">Puerto</string>

    <!-- Key name for color preference in SharedPreferences -->
    <!-- <string name="pref_color_key" translatable="false">color</string> -->

    <!-- Label for red color preference -->
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>


    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_server_key" translatable="false">server</string>
    <string name="pref_server_default" translatable="false"></string>

    <string name="pref_port_key" translatable="false">port</string>
    <string name="pref_port_default" translatable="false"></string>

    <string name="def" translatable="false">--------</string>
    <string name="but_antena" translatable="false">Actualizar\nantena</string>
    <string name="tex_oriantena" translatable="false">Orientación de la antena:</string>
    <string name="tex_antena" translatable="false">Acimut:\nElevación:</string>
    <string name="move" translatable="false">Mover</string>
    <string name="newAz" translatable="false">Nuevo acimut:</string>
    <string name="newEl" translatable="false">Nueva elevación:</string>
    <string name="hintAz" translatable="false">Acimut</string>
    <string name="hintEl" translatable="false">Elevacion</string>
    <string name="but_mov" translatable="false">Pulsa para actualizar (tarda un rato)</string>
    <string name="but_sat" translatable="false">Actualizar satélites</string>

    <string name="about_1" translatable="false">Aplicación diseñada por\n\nPablo Álvarez (EA4HFV)\n\nTwitter:</string>
    <string name="about_2" translatable="false">Colaborando para el\n\nRadioClub E.I.T. (EA4RCT)\n\n\n\nVisita nuestra web y redes sociales:</string>
</resources>
