<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- <CheckBoxPreference
        android:defaultValue="true"
        android:key="display_text"
        android:summaryOff="Invisible"
        android:summaryOn="Visible"
        android:title="@string/display_text"/>

    <ListPreference
        android:defaultValue="pref_color_red_value"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"
        android:key="@string/pref_color_key"
        android:title="@string/change_text_color" /> -->

    <EditTextPreference
        android:defaultValue="@string/pref_server_default"
        android:key="@string/pref_server_key"
        android:title="@string/server"/>
    <EditTextPreference
        android:defaultValue="@string/pref_port_default"
        android:key="@string/pref_port_key"
        android:title="@string/port"/>
</PreferenceScreen>